pilot/pkg/security/authz/builder/testdata/http/allow-connection-sni-in.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: httpbin-1
  namespace: foo
spec:
  selector:
    matchLabels:
      app: httpbin
      version: v1
  rules:
    - when:
        - key: "connection.sni"
          values: ["exact.com", "*.suffix.com"]
          notValues: ["not-exact.com", "*.not-suffix.com"]
